# verl-for-unified-model

.config/vllm/: usage_stats.json
.triton/cache/OxYNdsWgAhW3rm8VbHc_BAbAz3WQqgs2MLtwn9AfcoM/: __grp__rotary_kernel.json  rotary_kernel.cubin  rotary_kernel.json  rotary_kernel.llir  rotary_kernel.ptx  rotary_kernel.ttgir  rotary_kernel.ttir
examples/data_preprocess/: geo3k.py  text_rendering.py
examples/grpo_trainer/: run_tar_text_rendering.sh  run_test.sh
unified-model/: cot_generate_inference_janus.py  cot_generate_inference_tar.py  pyproject.toml
unified-model/janus/: __init__.py
unified-model/janus/janusflow/models/: image_processing_vlm.py
unified-model/janus/models/: modeling_vlm.py
unified-model/tar/: .gitignore  README.md  i2t_inference.py  requirements.txt  t2i_inference.py
unified-model/tar/llava/: mm_utils.py
unified-model/tar/llava/data/: dataset.py
unified-model/tar/llava/model/: __init__.py  builder.py  llava_arch.py
unified-model/tar/llava/model/language_model/: llava_qwen.py
unified-model/tar/llava/model/multimodal_encoder/: builder.py  ta_tok_encoder.py
unified-model/tar/llava/train/: llava_trainer.py  train.py
unified-model/tar/models/: __init__.py  config.py  image_processing_vlm.py  modeling_vlm.py  processing_vlm.py
unified-model/tar/tok/: mm_autoencoder.py  ta_tok.py
unified-model/tar/tok/ar_dtok/: ar_model.py
verl/trainer/: main_ppo_unified.py
verl/trainer/config/: ppo_trainer_unified.yaml
verl/trainer/config/reward_model/: dp_reward_model_unified.yaml
verl/workers/: fsdp_workers.py
verl/workers/reward_manager/: __init__.py  unified.py
verl/workers/rollout/vllm_rollout/: vllm_rollout_spmd.py
